<resources>
    <string name="channel">Channel</string>
    <string name="server_ip">Server address</string>
    <string name="ent_username_hint">username</string>
    <string name="personal_username_hint">id/phone</string>
    <string name="password">password</string>
    <string name="app_name">bjxt_talk</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="connectionClosed">Connection Closed</string>
    <string name="connectionRefused">connection Refused</string>
    <string name="connectFailed">connectFailed</string>
    <string name="connect_fail_please_retry">Connect failed. Please retry</string>
    <string name="connected">Online</string>
    <string name="disconnected">Offline</string>
    <string name="leave">Leave</string>
    <string name="enable_float_btn">Float window</string>
    <string name="enable_auto_launch">Auto launch</string>
    <string name="fix_3s">Fix bluetooth-cant-record</string>
    <string name="notification">Notification</string>
    <string name="alert_volume">Notification volume</string>
    <string name="call_sms_text">SMS content</string>
    <string name="support_headset_key">Headset PTT</string>
    <string name="forbid_bt_record">Forbid bluetooth mic</string>
    <string name="handmic_alarm">Handmic alert</string>
    <string name="more_heartbeat">Strong online background</string>
    <string name="short_delay">short delay receive(test)</string>
    <string name="ham_notif">HAM style</string>
    <string name="support_vol_key">Volume key PTT</string>
    <string name="register_new_user">Register</string>
    <string name="forget_pwd">Forget password</string>
    <string name="register">Register</string>
    <string name="registering">Registering...</string>
    <string name="login">Login</string>
    <string name="logging_in">Logining...</string>
    <string name="login_fail">Login failed</string>
    <string name="userid_bad_format">Malformat username or id</string>
    <string name="channel_name_bad_format">Malformat channel name</string>
    <string name="channel_id_bad_format">Malformat channel id</string>
    <string name="channel_pwd_bad_format">Malformat channel password</string>
    <string name="password_bad_format">Malformat password</string>
    <string name="nick_bad_format">Malformat nick</string>
    <string name="phone_bad_format">Malformat number</string>
    <string name="channel_no_bad_format">Malformat channel id</string>
    <string name="code_bad_format">Malformat verification code</string>
    <string name="wrong_old_pwd">Wrong password</string>
    <string name="different_pwd">Not match</string>
    <string name="nick_needed">Nick needed</string>
    <string name="connect_fail">Connect failed</string>
    <string name="nickname">Nick</string>
    <string name="input_nickname">Input nick</string>
    <string name="input_phonenumber">Input phone</string>
    <string name="get_sms">Get SMS</string>
    <string name="input_auth_number">Input verification code</string>
    <string name="set_password">Set password</string>
    <string name="set_password_again">Password again</string>
    <string name="service_rule">Service rule</string>
    <string name="check_rule_first">Please confirm service rule</string>
    <string name="create_channel">Create channel</string>
    <string name="join_channel">Join channel</string>
    <string name="add_contact">Add contact</string>
    <string name="contact">Contacts</string>
    <string name="push_to_talk">PTT</string>
    <string name="add">Add</string>
    <string name="tmp_call">Call</string>
    <string name="use_accessory">Accessory</string>
    <string name="ble_scan_tip">If can\'t search device, open Android setting-location-trun on, and provide app location permission</string>
    <string name="device_disc_click_to_reconnect">Device disconnected\nClick button to connect</string>
    <string name="accessory_intro">Accessory for PTT app: phone, button, handmic, PTT router</string>
    <string name="detail">Detail</string>
    <string name="buy">Buy</string>
    <string name="prev_page">Prev</string>
    <string name="next_page">Next</string>
    <string name="search_channel">Search channel</string>
    <string name="history">History</string>
    <string name="set_count">Account</string>
    <string name="set_nick">Set nick</string>
    <string name="set_pwd">Set password(>=6 char)</string>
    <string name="agree">agree</string>
    <string name="verify_phone">Verify phone</string>
    <string name="phone_number">Phone number</string>
    <string name="input_verify_code">Input verify code in SMS</string>
    <string name="check_update">Check update</string>
    <string name="call_about">about Taxi system</string>
    <string name="scan_to_download">Scan to download</string>
    <string name="record_help">Default process voice. If talk volume small or bluetooth record fail\nTry normal mode</string>
    <string name="recordmode_normal">normal mode</string>
    <string name="recordmode_process">voice process</string>
    <string name="recordmode_other1">other 1</string>
    <string name="recordmode_other2">other 2</string>
    <string name="recordmode_other3">other 3</string>
    <string name="recordmode_other4">other 4</string>
    <string name="recordmode_other5">other 5</string>
    <string name="recordmode_other6">other 6</string>
    <string name="other_setting_help">Other settings</string>
    <string name="other_setting_sms">SMS Notification</string>
    <string name="force_tcp">Force use TCP</string>
    <string name="force_tcp_help">Check consume more net data usage</string>
    <string name="fix_mtu">Fix T3 handmic MTU=23</string>
    <string name="fix_mtu_help">If T3 disconnecting, try check and restart app</string>
    <string name="link_relogin_help">Will relogin when be kicked by other device</string>
    <string name="new_chan_pwd">New channel pwd(4-digits. Blank for no pwd)</string>
    <string name="input_old_pwd">Input old password</string>
    <string name="input_new_pwd">Input new password</string>
    <string name="input_again">Input again</string>
    <string name="auto_login">Auto login when launch</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_pwd">Channel password(4-digits. Blank for no password)</string>
    <string name="channel_comment">Channel may need comment to apply-approved</string>
    <string name="name">Name</string>
    <string name="pwd">Password</string>
    <string name="member_list">Members</string>
    <string name="chat_history">Message record</string>
    <string name="creator_nick">Creator</string>
    <string name="channel_id">Channel id</string>
    <string name="channel_kouling">Channel password</string>
    <string name="ptt_broadcast_help">Some phone has PTT key which can send broadcast, to support PTT</string>
    <string name="when_down">Down</string>
    <string name="when_up">Up</string>
    <string name="press_key">Press hardware key</string>
    <string name="record_mode">Voice record</string>
    <string name="other_setting">Other settings</string>
    <string name="call_setting">Taxi orders settings</string>
    <string name="delete">delete</string>
    <string name="set_broadcast">Set key broadcast</string>
    <string name="ptt_key_def">PTT key map</string>
    <string name="notif_style">Notification style</string>
    <string name="you_have_not">You have not channel. Please </string>
    <string name="create">create </string>
    <string name="or">or </string>
    <string name="join">join </string>
    <string name="one">one!</string>
    <string name="syncing">synchronizing...</string>
    <string name="be_kicked">Account login on other device</string>
    <string name="share_content">I am using Totalk PTT. Come to talk with me. Search Totalk in App Store or app market</string>
    <string name="idle">Idle</string>
    <string name="change_chan_pwd">Change channel password</string>
    <string name="notif">Notification</string>
    <string name="map_notice">Will share your location with others, continue?</string>
    <string name="confirm_set_private">Others cant search private channel. Continue?</string>
    <string name="confirm_set_public">Others can search public channel. Continue?</string>
    <string name="manage_member_auth">Member authorization</string>
    <string name="quit_channel">Quit channel</string>
    <string name="delete_channel">Delete channel</string>
    <string name="confirm_delete_chan">Will be removed permanantly. Continue?</string>
    <string name="confirm_quit_chan">Will not show channel after quit. Continue?</string>
    <string name="as_contact"> as contact?</string>
    <string name="apply_sent">Application sent</string>
    <string name="is_public_channel">Is searchable</string>
    <string name="is_show_pass_channel">Is show password</string>
    <string name="private_channel">Pirvate channel</string>
    <string name="no_pwd">No password</string>
    <string name="i_create">In totalk I created channel[</string>
    <string name="i_in_totalk">I am in totalk channel [</string>
    <string name="kouling">password</string>
    <string name="confirm_delete_contact">Delete contact?</string>
    <string name="device_ok_click_to_disconnect">Device connected.\nClick button to disconnect</string>
    <string name="connecting_device">Connecting device...</string>
    <string name="scaning_device">Scanning device...</string>
    <string name="invalid_phone">Invalid phone. Please confirm</string>
    <string name="reset_pwd">Reset password</string>
    <string name="set_new_password">Set new password(>=6 char)</string>
    <string name="submit">Submit</string>
    <string name="reg_ok">Cheers! Register succeed！\nYour totalk id:</string>
    <string name="reg_fail">Register failed. The phone may already be registered.</string>
    <string name="reset_pwd_ok">Reset password succeeded. Please login!</string>
    <string name="reset_pwd_fail">Reset password failed. Please try again.</string>
    <string name="submitting">submitting...</string>
    <string name="recommand_public_channels">recommand public channels:</string>
    <string name="exp_chan">Experience channel(#1024)</string>
    <string name="motor_chan">Motor channel(#1302)</string>
    <string name="ham_chan">HAM channel(#6702)</string>
    <string name="car_chan">Taxi channel(#6704)</string>
    <string name="send_sms_to">Send verify SMS to </string>
    <string name="verify_ok">Verify OK</string>
    <string name="verify_fail">Verify failed</string>
    <string name="verify_sent">Verify code sent</string>
    <string name="sent_and_wait">SMS sent...(</string>
    <string name="send_again">send again(</string>
    <string name="headset_help">Use dial key of line/bluetooth headset for PTT</string>
    <string name="forbid_bt_mic_help">When bluetooth headset connected, app use bluetooth MIC be default. Check this will forbid</string>
    <string name="handmic_alarm_help">Handmic alert when checked</string>
    <string name="more_heartbeat_help">More stable online, mainly for Huawei phone</string>
    <string name="short_delay_help">Quicker recieving with possible worse continuity</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="ptt_down">PTT down</string>
    <string name="i_begin">Begin talk</string>
    <string name="i_stop">Stop talk</string>
    <string name="other_begin">Incoming voice</string>
    <string name="thanks"> </string>
    <string name="share">Share</string>
    <string name="homepage_link">www.allptt.com</string>
    <string name="channelId">Channel id</string>
    <string name="need_apply">Need apply-approve for new member</string>
    <string name="allow_order_bg">Allow apply Taxi order everywhere</string>
    <string name="tvQQ"><a href='https://jq.qq.com/?_wv=1027&amp;k=5Q5MvfP'>QQ:452570602</a></string>
</resources>