<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"   
	android:orientation="vertical"
	android:padding="5dp" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="10dp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/press_key"
		android:textSize="@dimen/text_size_small" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<EditText
			android:id="@+id/et_keycode"
			android:editable="false"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="@dimen/row_height"
			android:textSize="@dimen/text_size_small2"
			android:background="@drawable/shape_et_bg" />
		<Button
			android:id="@+id/btn_delete_keycode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete"
			android:textSize="@dimen/text_size_small2"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="30dp" />

	<LinearLayout
		android:id="@+id/ll_set_ptt_broadcast"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right|center_vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/set_broadcast"
			android:textSize="@dimen/text_size_small2"
			android:textColor="@color/gray_90"/>
		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:src="@drawable/arrow_right_gray"/>
	</LinearLayout>
</LinearLayout>