<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"   
	android:orientation="vertical"
	android:padding="5dp" > 
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="10dp" />
    
		<EditText 
		   	android:id="@+id/et_change_pwd0"   
			android:layout_width="match_parent"  
		    android:layout_height="@dimen/row_height"
		    android:hint="@string/input_old_pwd"
			android:singleLine="true"
			android:textSize="@dimen/text_size_small2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
			android:inputType="textPassword"
			android:background="@drawable/shape_et_bg" />
    	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="20dp" />
		<EditText 
		   	android:id="@+id/et_change_pwd1"   
			android:layout_width="match_parent"  
		    android:layout_height="@dimen/row_height"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
		    android:hint="@string/input_new_pwd"
			android:singleLine="true"
			android:textSize="@dimen/text_size_small2"
			android:inputType="textPassword"
			android:background="@drawable/shape_et_bg" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="5dp" />
		<EditText 
		   	android:id="@+id/et_change_pwd2"   
			android:layout_width="match_parent"  
		    android:layout_height="@dimen/row_height"
		    android:hint="@string/input_again"
			android:singleLine="true"
			android:textSize="@dimen/text_size_small2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
			android:inputType="textPassword"
			android:background="@drawable/shape_et_bg" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="10dp" />
				
</LinearLayout> 